sample-react-app/manifests/service.yml
apiVersion: v1
kind: Service
metadata:
  name: react-app-service
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 3000

  selector:
    app: react
