sample-react-app/manifests/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: react-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: "192.168.49.2.nip.io"
  - http:
      paths:
      - path: /nginx
        pathType: Prefix
        backend:
          service:
            name: react
            port:
              number: 80
